# Pilotage-flux

./: .gitignore  README.md  pyproject.toml
data/: comparative_4000runs_xl.md  comparative_baseline_report.md  comparative_extended_report.md  comparative_xl_report.md  learning_report.md  random_study_report.md
docs/: RUN_CORPUS.md  audit_forensique_simulation.md  audit_simulation_v13_0.md  bce_full_study_runs.csv  bce_full_study_stats.json  build_cadrage_v4_docx.py  build_charts.py  build_excel_kpis.py  build_master_clean_study.py  build_master_v2_extended.py  build_master_v2_windows.py  build_of_event_ablation.py  build_of_event_ablation_gradient.py  build_of_event_bce_low_med.py  build_of_event_breaking_point.py  build_of_event_composition.py  build_of_event_docs_docx.py  build_of_event_saturation.py  build_of_flux_event_bce_extreme.py  build_of_flux_event_bce_study.py  build_otif_first_study.py  build_paper_docx.py  build_paper_extension_figures.py  build_paper_fig4_forecasting.py  build_paper_fig5_zones.py  build_paper_fig6_v12_complete.py  build_paper_figures.py  build_paper_hal_docx.py  build_point2_real_disponibility.py  build_point3_direct_sensitivity.py  build_qcds_matrix_5_doctrines.py  build_qcds_realistic_capacity.py  build_qcds_study.py  build_qcds_v13_1.py  build_rapport_bce_docx.py  build_rapport_pair_docx.py  build_rapport_stress_docx.py  build_resilience_analysis.py  build_resilience_extension.py  build_v12_6_comparative.py  (+102 more)
tests/: conftest.py  test_acceptance_golden_path.py  test_acceptance_v1.py  test_acceptance_v10.py  test_acceptance_v10_little.py  test_acceptance_v11.py  test_acceptance_v12.py  test_acceptance_v12_1.py  test_acceptance_v12_2.py  test_acceptance_v12_4.py  test_acceptance_v2.py  (+88 more)
(+173 files in other folders)
