[project]
name = "pilotage-flux"
version = "0.0.1"
description = "APS + MES en pilotage par flux lean - test de faisabilite V0"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]
# Dépendances des scripts d'étude docs/ (graphiques + exports).
# ortools est volontairement omis (lourd, requis seulement par la
# doctrine OF_MILP) : l'installer à part si besoin.
studies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "python-docx>=1.1",
]

[project.scripts]
pflux = "pilotage_flux.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pilotage_flux.db" = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
